LDEV-3275: Decrease version of Hibernate from 4.x (delivered to WildFly) to 3.6.10 (newer than used before, but still 3.x as otherwise Spring won't work with it).