@@ -23,32 +23,24 @@
  */
 package org.hibernate.cfg;
 
+import java.util.Map;
 import java.util.ArrayList;
 import java.util.Iterator;
-import java.util.Map;
 
-import org.hibernate.CacheMode;
-import org.hibernate.FlushMode;
 import org.hibernate.MappingException;
+import org.hibernate.util.StringHelper;
+import org.hibernate.engine.NamedSQLQueryDefinition;
 import org.hibernate.engine.ResultSetMappingDefinition;
-import org.hibernate.engine.spi.NamedSQLQueryDefinition;
-import org.hibernate.engine.spi.NamedSQLQueryDefinitionBuilder;
-import org.hibernate.internal.CoreMessageLogger;
-import org.hibernate.internal.util.StringHelper;
-
-import org.jboss.logging.Logger;
-
 import org.dom4j.Attribute;
 import org.dom4j.Element;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * @author Emmanuel Bernard
  */
 public class NamedSQLQuerySecondPass extends ResultSetMappingBinder implements QuerySecondPass {
-
-    private static final CoreMessageLogger LOG = Logger.getMessageLogger(CoreMessageLogger.class,
-                                                                       NamedSQLQuerySecondPass.class.getName());
-
+	private static Logger log = LoggerFactory.getLogger( NamedSQLQuerySecondPass.class);
 	private Element queryElem;
 	private String path;
 	private Mappings mappings;
@@ -66,9 +58,9 @@ public class NamedSQLQuerySecondPass extends ResultSetMappingBinder implements Q
 		boolean cacheable = "true".equals( queryElem.attributeValue( "cacheable" ) );
 		String region = queryElem.attributeValue( "cache-region" );
 		Attribute tAtt = queryElem.attribute( "timeout" );
-		Integer timeout = tAtt == null ? null : Integer.valueOf( tAtt.getValue() );
+		Integer timeout = tAtt == null ? null : new Integer( tAtt.getValue() );
 		Attribute fsAtt = queryElem.attribute( "fetch-size" );
-		Integer fetchSize = fsAtt == null ? null : Integer.valueOf( fsAtt.getValue() );
+		Integer fetchSize = fsAtt == null ? null : new Integer( fsAtt.getValue() );
 		Attribute roAttr = queryElem.attribute( "read-only" );
 		boolean readOnly = roAttr != null && "true".equals( roAttr.getValue() );
 		Attribute cacheModeAtt = queryElem.attribute( "cache-mode" );
@@ -87,45 +79,43 @@ public class NamedSQLQuerySecondPass extends ResultSetMappingBinder implements Q
 		Attribute ref = queryElem.attribute( "resultset-ref" );
 		String resultSetRef = ref == null ? null : ref.getValue();
 		if ( StringHelper.isNotEmpty( resultSetRef ) ) {
-			namedQuery = new NamedSQLQueryDefinitionBuilder().setName( queryName )
-					.setQuery( queryElem.getText() )
-					.setResultSetRef( resultSetRef )
-					.setQuerySpaces( synchronizedTables )
-					.setCacheable( cacheable )
-					.setCacheRegion( region )
-					.setTimeout( timeout )
-					.setFetchSize( fetchSize )
-					.setFlushMode( FlushMode.interpretExternalSetting( queryElem.attributeValue( "flush-mode" ) ) )
-					.setCacheMode( CacheMode.interpretExternalSetting( cacheMode ) )
-					.setReadOnly( readOnly )
-					.setComment( comment )
-					.setParameterTypes( HbmBinder.getParameterTypes( queryElem ) )
-					.setCallable( callable )
-					.createNamedQueryDefinition();
+			namedQuery = new NamedSQLQueryDefinition(
+					queryElem.getText(),
+					resultSetRef,
+					synchronizedTables,
+					cacheable,
+					region,
+					timeout,
+					fetchSize,
+					HbmBinder.getFlushMode( queryElem.attributeValue( "flush-mode" ) ),
+					HbmBinder.getCacheMode( cacheMode ),
+					readOnly,
+					comment,
+					HbmBinder.getParameterTypes( queryElem ),
+					callable
+			);
 			//TODO check there is no actual definition elemnents when a ref is defined
 		}
 		else {
 			ResultSetMappingDefinition definition = buildResultSetMappingDefinition( queryElem, path, mappings );
-			namedQuery = new NamedSQLQueryDefinitionBuilder().setName( queryName )
-					.setQuery( queryElem.getText() )
-					.setQueryReturns( definition.getQueryReturns() )
-					.setQuerySpaces( synchronizedTables )
-					.setCacheable( cacheable )
-					.setCacheRegion( region )
-					.setTimeout( timeout )
-					.setFetchSize( fetchSize )
-					.setFlushMode( FlushMode.interpretExternalSetting( queryElem.attributeValue( "flush-mode" ) ) )
-					.setCacheMode( CacheMode.interpretExternalSetting( cacheMode ) )
-					.setReadOnly( readOnly )
-					.setComment( comment )
-					.setParameterTypes( HbmBinder.getParameterTypes( queryElem ) )
-					.setCallable( callable )
-					.createNamedQueryDefinition();
+			namedQuery = new NamedSQLQueryDefinition(
+					queryElem.getText(),
+					definition.getQueryReturns(),
+					synchronizedTables,
+					cacheable,
+					region,
+					timeout,
+					fetchSize,
+					HbmBinder.getFlushMode( queryElem.attributeValue( "flush-mode" ) ),
+					HbmBinder.getCacheMode( cacheMode ),
+					readOnly,
+					comment,
+					HbmBinder.getParameterTypes( queryElem ),
+					callable
+			);
 		}
 
-		if ( LOG.isDebugEnabled() ) {
-			LOG.debugf( "Named SQL query: %s -> %s", namedQuery.getName(), namedQuery.getQueryString() );
-		}
+		log.debug( "Named SQL query: " + queryName + " -> " + namedQuery.getQueryString() );
 		mappings.addSQLQuery( queryName, namedQuery );
 	}
 }
