@@ -1,10 +1,10 @@
 /*
  * Hibernate, Relational Persistence for Idiomatic Java
  *
- * Copyright (c) 2008, 2013, Red Hat Inc. or third-party contributors as
+ * Copyright (c) 2008, Red Hat Middleware LLC or third-party contributors as
  * indicated by the @author tags or express copyright attribution
  * statements applied by the authors.  All third-party contributions are
- * distributed under license by Red Hat Inc.
+ * distributed under license by Red Hat Middleware LLC.
  *
  * This copyrighted material is made available to anyone wishing to use, modify,
  * copy, or redistribute it subject to the terms and conditions of the GNU
@@ -23,51 +23,34 @@
  */
 package org.hibernate.engine.jdbc;
 
-import java.sql.ResultSet;
 import java.sql.SQLException;
+import java.sql.ResultSet;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.Map;
 
 /**
  * Cache of column-name -> column-index resolutions
  *
  * @author Steve Ebersole
  */
-public final class ColumnNameCache {
-	private static final float LOAD_FACTOR = .75f;
+public class ColumnNameCache {
+	public static final float LOAD_FACTOR = .75f;
 
-	private final ConcurrentHashMap<String, Integer> columnNameToIndexCache;
+	private final Map<String, Integer> columnNameToIndexCache;
 
-	/**
-	 * Constructs a ColumnNameCache
-	 *
-	 * @param columnCount The number of columns to be cached.
-	 */
 	public ColumnNameCache(int columnCount) {
 		// should *not* need to grow beyond the size of the total number of columns in the rs
-		this.columnNameToIndexCache = new ConcurrentHashMap<String, Integer>(
-				columnCount + (int)( columnCount * LOAD_FACTOR ) + 1,
-				LOAD_FACTOR
-		);
+		this.columnNameToIndexCache = new ConcurrentHashMap<String, Integer>( columnCount + (int)( columnCount * LOAD_FACTOR ) + 1, LOAD_FACTOR, 16 );
 	}
 
-	/**
-	 * Resolve the column name/alias to its index
-	 *
-	 * @param columnName The name/alias of the column
-	 * @param rs The ResultSet
-	 *
-	 * @return The index
-	 *
-	 * @throws SQLException INdicates a problems accessing the underlying JDBC ResultSet
-	 */
-	public Integer getIndexForColumnName(String columnName, ResultSet rs) throws SQLException {
-		final Integer cached = columnNameToIndexCache.get( columnName );
+	public int getIndexForColumnName(String columnName, ResultSet rs) throws SQLException {
+		Integer cached = ( Integer ) columnNameToIndexCache.get( columnName );
 		if ( cached != null ) {
-			return cached;
+			return cached.intValue();
 		}
 		else {
-			final Integer index = Integer.valueOf( rs.findColumn( columnName ) );
-			columnNameToIndexCache.put( columnName, index);
+			int index = rs.findColumn( columnName );
+			columnNameToIndexCache.put( columnName, new Integer(index) );
 			return index;
 		}
 	}
